# testgen-copilot

./: .automation-scope.yaml  .changelogrc.json  .coverage  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .license-header.txt  .mergify.yml  .pre-commit-config.yaml  .quantum_planner.json  .releaserc.json  .secrets.baseline  ARCHITECTURE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_FINAL.md  AUTONOMOUS_SDLC_MASTER_IMPLEMENTATION.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.autonomous  Dockerfile.quantum  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESS_REPORT.md  PROJECT_CHARTER.md  QUANTUM_ARCHITECTURE.md  README.md  SECURITY.md  SPRINT_BOARD.md  (+77 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics-config.json  project-metrics.json  registry-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: autonomous-sdlc-ci.yml  ci.yml  security-enhanced-ci.yml
.terragon/: config.yaml  quality-rules.yaml  security-rules.yaml  slsa-compliance.yaml  value-discovery.py  workflow-integration.md
.testgen_cache/: 247383a0a556e2ab.cache
docker/: debian.dockerfile  entrypoint.sh  nginx.conf  security-scan.dockerfile
docker/scripts/: security-scan.sh
docs/: API.md  AUTOMATION_LIMITS.md  AUTONOMOUS_SDLC_GUIDE.md  COMPLIANCE.md  DEVELOPMENT.md  GITHUB_WORKFLOWS_SETUP.md  IMPLEMENTATION_SUMMARY.md  OPERATIONAL_RUNBOOKS.md  RISK_ASSESSMENT.md  ROADMAP.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY_ARCHITECTURE.md  SETUP_REQUIRED.md  USAGE.md  WORKFLOW_DEPLOYMENT_GUIDE.md  conf.py  github-workflow-template.yml  index.rst  requirements.txt
docs/_static/: custom.css
docs/adr/: 000-template.md  001-python-cli-architecture.md  002-security-rule-engine.md  002-testing-framework-selection.md
docs/api/: modules.rst  testgen_copilot.rst
docs/deployment/: README.md
docs/monitoring/: README.md
docs/runbooks/: incident-response.md  service-down.md
docs/schema/: config.schema.json
docs/status/: autonomous-execution-2025-07-24-iteration2.json  autonomous-execution-2025-07-24-iteration3.json  autonomous-execution-2025-07-24-iteration4.json  autonomous-execution-2025-07-24-iteration5.json  autonomous-execution-2025-07-24.json  autonomous-execution-2025-07-24.md  autonomous-execution-2025-07-25-final.json  autonomous-execution-2025-07-26-session3.json  autonomous-execution-report-2025-07-26-session2.md  autonomous-execution-report-2025-07-26-session3.md  autonomous-execution-report-2025-07-26.md
docs/testing/: README.md
docs/workflow-staging/: ci.yml  performance-monitoring.yml  security-audit.yml  supply-chain-security.yml
docs/workflow-templates/: README.md  comprehensive-ci-cd.yml  dependabot.yml  dependency-update.yml  release.yml  security-scan.yml
docs/workflows/: IMPLEMENTATION_GUIDE.md  README.md
monitoring/: alert_rules.yml  alertmanager.yml  autonomous-alert-rules.yml  blackbox.yml  docker-compose.monitoring.yml  docker-compose.observability.yml  otel-collector.yml  otel-config.yaml  prometheus.yml  promtail-config.yml  quantum-alert-rules.yml  quantum-prometheus.yml
nginx/: autonomous-production.conf  quantum.conf
quantum_venv/: pyvenv.cfg
reports/: .gitkeep
scripts/: automated_quality_gates.py  build.sh  changelog-generator.py  collect_metrics.py  container-automation.sh  container_security_scan.sh  deploy-quantum.sh  deploy_autonomous_production.sh  generate_performance_report.py  generate_sbom.py  generate_tests.py  init-db.sql  profile_memory.py  project_health_monitor.py  quantum_security_scan.py  repository_maintenance.sh  setup_git_hooks.sh  setup_workflows.sh
src/testgen_copilot/: __init__.py  __main__.py  adaptive_intelligence.py  advanced_error_handling.py  advanced_monitoring_system.py  advanced_resilience_system.py  advanced_validation_engine.py  ast_utils.py  async_processor.py  auto_scaling.py  autonomous_backlog.py  autonomous_deployment_system.py  autonomous_execution.py  autonomous_manager.py  autonomous_neural_architecture.py  autonomous_quality_gates.py  autonomous_research_engine.py  autonomous_resilience_engine.py  autonomous_sdlc_engine.py  cache.py  cli.py  compliance.py  comprehensive_monitoring.py  core.py  coverage.py  cross_platform_optimizer.py  enhanced_robustness_system.py  enhanced_security_framework.py  error_recovery.py  file_utils.py  generator.py  health.py  (+46 more)
test_venv/: pyvenv.cfg
testgen_copilot/: __init__.py  core.py
tests/: add-command-to-generate-tests-from-active-file.py  add-security-and-coverage-commands.py  conftest.py  contract_tests.py  document-extension-usage-and-configuration.py  provide-real-time-suggestions-using-lsp-diagnostics.py  pytest.config.py  scaffold-vs-code-extension-for-ide-integration.py  sprint_acceptance_criteria.json  test_api_integration.py  test_ast_parsing_consolidation.py  test_ast_patterns.py  test_autonomous_backlog.py  test_benchmark_generation.py  test_cli.py  test_cli_validation.py  test_coverage_analysis.py  test_cross_platform_timeout.py  test_enhanced_cli_validation.py  test_error_handling.py  test_error_path_generation.py  test_file_utils.py  test_foundational.py  test_generation3_scaling.py  test_generation4_global.py  test_generator_assertions.py  test_generator_logging_standards.py  test_integration_generation.py  test_logging_standardization.py  test_parallel_coverage.py  test_parameterized_quality.py  test_profiler.py  test_quality_scoring.py  test_quantum_integration.py  test_quantum_planner.py  test_resource_limits.py  test_safe_file_integration.py  test_security_scanner.py  test_structured_logging.py  utils.py
tools/: auto-rebase-workflow.yml.template  ci-enhancement.yml.patch
vscode-extension/: README.md  package.json  tsconfig.json
(+41 files in other folders)
